2014-10-03  Andy Buckley  <andy.buckley@cern.ch>

	* Better code organisation and protection against out-of-bounds
	array accesses in log-bicubic interpolator.

2014-08-28  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Fallback to bilinear interpolator if using bicubic
	interpolator with only 2 or 3 Q2 knots in a subgrid.

2014-08-26  Andy Buckley  <andy.buckley@cern.ch>

	* Improve LHAGlue info messages to not specify that particular
	generators are being used.

2014-08-19  Andy Buckley  <andy.buckley@cern.ch>

	* LHAPDF 6.1.4 release

2014-08-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding multiset variants of the 5 getmin/max LHAGlue functions.

	* Adding the 'unofficial' getminmax Fortran function to LHAGlue.cc
	(thanks to Andrey Sapronov for the report and patch).

2014-07-18  Andy Buckley  <andy.buckley@cern.ch>

	* Treat PID 0 as an alias for 21 in PDF::hasFlavor as well as the
	PDF::xf* functions. Thanks to Nathan Hartland for the report.

2014-07-10  Andy Buckley  <andy.buckley@cern.ch>

	* Clarify in lhapdf script help that 'list' by default shows all
	available sets, not those installed on the user's system.

2014-07-09  Andy Buckley  <andy.buckley@cern.ch>

	* Update CONFIGFLAGS docs to fix some errors w.r.t. actual flag usage.

	* Treat a DataVersion of 0 as unvalidated: valid numbers now start at 1.

	* Remove the LHAPDF ID from the warning printout about unvalidated
	PDFs, since in that case there will usually be no standard ID
	number and it just gets unhelpfully reported as -1.

	* Detect and report improperly terminated grid files (ones missing a --- final line).

	* Replace asserts with exceptions and improve subgrid error reporting in GridPDF.

	* Report the value of Q2 that causes a subgrid-finding failure.

	* Improve testgrid to use PDFNAME/MEMNUM arg syntax.

2014-07-7 David Grellscheid <david.grellscheid@ippp.dur.ac.uk>

	* Forbid compilation if the demon combination of Boost < 1.47 and