@@ -1,6 +1,6 @@
 Verbosity: 1
 Interpolator: logcubic
-Extrapolator: nearest
+Extrapolator: continuation
 ForcePositive: 0
 UndefFlavorAction: return_zero
 PwdInSearchPath: false
