@@ -173,12 +173,12 @@ MSTW2008nlo90cl_asmz-90cl.LHgrid     --version=2 --subgrids --errtype=hessian --
 MSTW2008nlo90cl_asmz+90clhalf.LHgrid --version=2 --subgrids --errtype=hessian --cl=90 --id=22400 --desc="MSTW 2008 NLO (90% C.L.) with alpha_S fixed at half +90% C.L. limit.  This set has 41 member PDFs.  mem=0 => central value; mem=1-40 => 20 eigenvectors (+/- directions).  See paper for error calculation; alpha_S(M_Z) = 0.12176.  http://mstwpdf.hepforge.org" --ref="arXiv:0905.3531" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
 MSTW2008nlo90cl_asmz-90clhalf.LHgrid --version=2 --subgrids --errtype=hessian --cl=90 --id=22450 --desc="MSTW 2008 NLO (90% C.L.) with alpha_S fixed at half -90% C.L. limit.  This set has 41 member PDFs.  mem=0 => central value; mem=1-40 => 20 eigenvectors (+/- directions).  See paper for error calculation; alpha_S(M_Z) = 0.11825.  http://mstwpdf.hepforge.org" --ref="arXiv:0905.3531" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
 
-MSTW2008nlo_mcrange.LHgrid             --version=2        --diffasmass --pdftype=central --subgrids --id=23400 --desc="MSTW 2008 NLO (fits for range of m_c values).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nlo_mcrange_nf3.LHgrid         --version=2 --nf=3 --diffasmass --pdftype=central --subgrids --id=23420 --desc="MSTW 2008 NLO (fits for range of m_c values, evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nlo_mcrange_fixasmz.LHgrid     --version=2        --diffasmass --pdftype=central --subgrids --id=23440 --desc="MSTW 2008 NLO (fits for range of m_c values, fix alpha_S(M_Z)).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nlo_mcrange_fixasmz_nf3.LHgrid --version=2 --nf=3 --diffasmass --pdftype=central --subgrids --id=23460 --desc="MSTW 2008 NLO (fits for range of m_c values, fix alpha_S(M_Z), evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nlo_mbrange.LHgrid             --version=2        --diffasmass --pdftype=central --subgrids --id=23480 --desc="MSTW 2008 NLO (fits for range of m_b values).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nlo_mbrange_nf4.LHgrid         --version=2 --nf=4 --diffasmass --pdftype=central --subgrids --id=23490 --desc="MSTW 2008 NLO (fits for range of m_b values, evolve with 4 flavours maximum).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nlo_mcrange.LHgrid             --version=3        --diffasmass --pdftype=central --subgrids --id=23400 --desc="MSTW 2008 NLO (fits for range of m_c values).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nlo_mcrange_nf3.LHgrid         --version=3 --nf=3 --diffasmass --pdftype=central --subgrids --id=23420 --desc="MSTW 2008 NLO (fits for range of m_c values, evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nlo_mcrange_fixasmz.LHgrid     --version=3        --diffasmass --pdftype=central --subgrids --id=23440 --desc="MSTW 2008 NLO (fits for range of m_c values, fix alpha_S(M_Z)).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nlo_mcrange_fixasmz_nf3.LHgrid --version=3 --nf=3 --diffasmass --pdftype=central --subgrids --id=23460 --desc="MSTW 2008 NLO (fits for range of m_c values, fix alpha_S(M_Z), evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nlo_mbrange.LHgrid             --version=3        --diffasmass --pdftype=central --subgrids --id=23480 --desc="MSTW 2008 NLO (fits for range of m_b values).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nlo_mbrange_nf4.LHgrid         --version=3 --nf=4 --diffasmass --pdftype=central --subgrids --id=23490 --desc="MSTW 2008 NLO (fits for range of m_b values, evolve with 4 flavours maximum).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
 
 ## MSTW2008 at NNLO
 MSTW2008nnlo68cl.LHgrid        --version=2        --subgrids --errtype=hessian         --id=21200 --desc="MSTW 2008 NNLO (68% C.L.).  This set has 41 member PDFs.  mem=0 => central value; mem=1-40 => 20 eigenvectors (+/- directions).  See Section 6 of paper for error calculation.  http://mstwpdf.hepforge.org" --ref="arXiv:0901.0002" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
@@ -200,12 +200,12 @@ MSTW2008nnlo90cl_asmz-90cl.LHgrid     --version=2 --subgrids --errtype=hessian -
 MSTW2008nnlo90cl_asmz+90clhalf.LHgrid --version=2 --subgrids --errtype=hessian --cl=90 --id=22900 --desc="MSTW 2008 NNLO (90% C.L.) with alpha_S fixed at half +90% C.L. limit.  This set has 41 member PDFs.  mem=0 => central value; mem=1-40 => 20 eigenvectors (+/- directions).  See paper for error calculation; alpha_S(M_Z) = 0.11875.  http://mstwpdf.hepforge.org" --ref="arXiv:0905.3531" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
 MSTW2008nnlo90cl_asmz-90clhalf.LHgrid --version=2 --subgrids --errtype=hessian --cl=90 --id=22950 --desc="MSTW 2008 NNLO (90% C.L.) with alpha_S fixed at half -90% C.L. limit.  This set has 41 member PDFs.  mem=0 => central value; mem=1-40 => 20 eigenvectors (+/- directions).  See paper for error calculation; alpha_S(M_Z) = 0.11536.  http://mstwpdf.hepforge.org" --ref="arXiv:0905.3531" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
 
-MSTW2008nnlo_mcrange.LHgrid             --version=2        --diffasmass --pdftype=central --subgrids --id=23700 --desc="MSTW 2008 NNLO (fits for range of m_c values).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nnlo_mcrange_nf3.LHgrid         --version=2 --nf=3 --diffasmass --pdftype=central --subgrids --id=23720 --desc="MSTW 2008 NNLO (fits for range of m_c values, evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nnlo_mcrange_fixasmz.LHgrid     --version=2        --diffasmass --pdftype=central --subgrids --id=23740 --desc="MSTW 2008 NNLO (fits for range of m_c values, fix alpha_S(M_Z)).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nnlo_mcrange_fixasmz_nf3.LHgrid --version=2 --nf=3 --diffasmass --pdftype=central --subgrids --id=23760 --desc="MSTW 2008 NNLO (fits for range of m_c values, fix alpha_S(M_Z), evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nnlo_mbrange.LHgrid             --version=2        --diffasmass --pdftype=central --subgrids --id=23780 --desc="MSTW 2008 NNLO (fits for range of m_b values).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
-MSTW2008nnlo_mbrange_nf4.LHgrid         --version=2 --nf=4 --diffasmass --pdftype=central --subgrids --id=23790 --desc="MSTW 2008 NNLO (fits for range of m_b values, evolve with 4 flavours maximum).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nnlo_mcrange.LHgrid             --version=3        --diffasmass --pdftype=central --subgrids --id=23700 --desc="MSTW 2008 NNLO (fits for range of m_c values).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nnlo_mcrange_nf3.LHgrid         --version=3 --nf=3 --diffasmass --pdftype=central --subgrids --id=23720 --desc="MSTW 2008 NNLO (fits for range of m_c values, evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nnlo_mcrange_fixasmz.LHgrid     --version=3        --diffasmass --pdftype=central --subgrids --id=23740 --desc="MSTW 2008 NNLO (fits for range of m_c values, fix alpha_S(M_Z)).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nnlo_mcrange_fixasmz_nf3.LHgrid --version=3 --nf=3 --diffasmass --pdftype=central --subgrids --id=23760 --desc="MSTW 2008 NNLO (fits for range of m_c values, fix alpha_S(M_Z), evolve with 3 flavours).  This set has 15 member PDFs.  mem=0 => default m_c = 1.40 GeV; mem=1-14 => m_c = 1.05, 1.10, 1.15, 1.20, 1.25, 1.30, 1.35, 1.45, 1.50, 1.55, 1.60, 1.65, 1.70, 1.75 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nnlo_mbrange.LHgrid             --version=3        --diffasmass --pdftype=central --subgrids --id=23780 --desc="MSTW 2008 NNLO (fits for range of m_b values).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
+MSTW2008nnlo_mbrange_nf4.LHgrid         --version=3 --nf=4 --diffasmass --pdftype=central --subgrids --id=23790 --desc="MSTW 2008 NNLO (fits for range of m_b values, evolve with 4 flavours maximum).  This set has 7 member PDFs.  mem=0 => default m_b = 4.75 GeV; mem=1-6 => m_b = 4.00, 4.25, 4.50, 5.00, 5.25, 5.50 GeV.  http://mstwpdf.hepforge.org" --ref="arXiv:1007.2624" --authors="A.D. Martin, W.J. Stirling, R.S. Thorne and G. Watt"
 
 ## MSTW2008 CPdeut at NLO/NNLO
 MSTW2008CPdeutnlo68cl.LHgrid  --version=2 --subgrids --errtype=hessian --id=23800 --desc="MSTW 2008 CPdeut NLO (68% C.L.).  CPdeut = Chebyshev Polynomials with flexible deuteron correction.  Similar to original fit apart from small-x valence quarks.  This set has 47 member PDFs.  mem=0 => central value; mem=1-46 => 23 eigenvectors (+/- directions).  See Section 6 of arXiv:0901.0002 for error calculation.  http://mstwpdf.hepforge.org" --ref="arXiv:1211.1215" --authors="A.D. Martin, A.J.Th.M. Mathijssen, W.J. Stirling, R.S. Thorne, B.J.A. Watt and G. Watt"
